--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -80,6 +80,12 @@
             <version>2.0.5.RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+
+        <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-core</artifactId>
             <version>2.0.5.RELEASE</version>
