--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,10 @@
-HELP.md
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**
-!**/src/test/**
+/.idea
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+/*/.idea
+/*/.mvn
+/*/*.iml
+/*/target
+/*/mvnw
+/*/mvnw.cmd
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-
-### VS Code ###
-.vscode/
+/eureka_server/.mvn/wrapper/maven-wrapper.jar
